# variant

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  palgen.toml  scratchpad2.cpp
.github/: conan.profile
.github/workflows/: codegen.yml  tests.yml
benchmark/: bak-profiles.toml  control.cpp  profiles.toml  underlying.cpp  util.h
benchmark/algorithm/: cbt.cpp  profiles.toml
benchmark/type_list/: get.cpp  get_unique.cpp  profiles.toml
benchmark/visit/: macro_visit.cpp  profiles.toml  simple.h  strategy.h
include/slo/: union.h  variant.h
include/slo/impl/: common.h  concepts.h  exception.h  feature.h  storage.h  visit.h  wrapper.h
include/slo/impl/storage/: common.h  inverted.h  member_ptr.h  normal.h
include/slo/impl/union/: recursive.h  recursive.h.in  tree.h
include/slo/impl/visit/: fptr_array.h  macro.h  variadic.h  visit.h
include/slo/util/: compat.h  concepts.h  list.h  pack.h  pack_generated.h  pack_generated.h.in  stamp.h  utility.h  warning.h
test/: CMakeLists.txt  main.cpp
test/common/: assertions.h  const_string.h  lifetime.h  qualifiers.h  type_name.h  util.h
test/common/fixtures/: helpers.h
test/slo/: CMakeLists.txt  lifetime.cpp  visit.cpp
test/union/: CMakeLists.txt
test/util/: CMakeLists.txt  forward_like.cpp
test/variant/: CMakeLists.txt  constructors.cpp  lifetime.cpp  padding.cpp  special_members.cpp
test/variant/helper/: CMakeLists.txt  variant_alternative.cpp  variant_size.cpp
test/variant/variant.bad.access/: CMakeLists.txt  bad_variant_access.cpp
test/variant/variant.ctor/: CMakeLists.txt  converting.cpp  default.cpp
test/variant/variant.get/: CMakeLists.txt  get.cpp  holds_alternative.cpp
test/variant/variant.hash/: CMakeLists.txt  monostate.cpp  variant.cpp
test/variant/variant.helper/: CMakeLists.txt  variant_alternative.cpp  variant_npos.cpp  variant_size.cpp
test/variant/variant.visit/: CMakeLists.txt  forwarding_visitor.h  incomplete.cpp  value_category.cpp  visit.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tools/: amalgamate.py  benchmark.py  codegen.py  requirements.txt
